[gd_scene load_steps=10 format=3 uid="uid://d0oi0bv0p6f24"]

[ext_resource type="Texture2D" uid="uid://ddsg4ko4vntj7" path="res://assets/sprites/menus/backgrounds/menu_background_1.png" id="1_6i5sn"]
[ext_resource type="Script" uid="uid://sgps73874to" path="res://src/menus/title_screen.gd" id="1_33hcu"]
[ext_resource type="Texture2D" uid="uid://t1pb0sf0q0gr" path="res://assets/sprites/menus/backgrounds/menu_background_2.png" id="2_33hcu"]
[ext_resource type="Texture2D" uid="uid://y2dyksmg2esd" path="res://assets/sprites/menus/backgrounds/menu_background_3.png" id="3_yl47n"]
[ext_resource type="Texture2D" uid="uid://ddck2wci1f2uw" path="res://assets/sprites/menus/icons/cat_icon.png" id="4_v16t5"]
[ext_resource type="Texture2D" uid="uid://d4h7anm1c6bbg" path="res://assets/sprites/menus/icons/fish_icon.png" id="5_r3rbv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_scwbp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6i5sn")
}, {
"duration": 1.0,
"texture": ExtResource("2_33hcu")
}, {
"duration": 1.0,
"texture": ExtResource("3_yl47n")
}, {
"duration": 1.0,
"texture": ExtResource("2_33hcu")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Gradient" id="Gradient_33hcu"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1ayt3"]
gradient = SubResource("Gradient_33hcu")
width = 640
height = 480

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_33hcu")

[node name="Visuals" type="Node2D" parent="."]

[node name="Background" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(320, 240)
sprite_frames = SubResource("SpriteFrames_scwbp")
autoplay = "default"
frame_progress = 0.217971

[node name="BackgroundFilter" type="Sprite2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0.34902)
position = Vector2(320, 240)
texture = SubResource("GradientTexture2D_1ayt3")

[node name="CatIcon" type="Sprite2D" parent="Visuals"]
position = Vector2(138, 131)
texture = ExtResource("4_v16t5")

[node name="FishIcon" type="Sprite2D" parent="Visuals"]
position = Vector2(142, 311)
texture = ExtResource("5_r3rbv")

[node name="Buttons" type="Node2D" parent="."]

[node name="StartSoloButton" type="Button" parent="Buttons"]
offset_left = 435.0
offset_top = 155.0
offset_right = 581.0
offset_bottom = 205.0
text = "Start Solo"

[node name="StartServerButton" type="Button" parent="Buttons"]
offset_left = 435.0
offset_top = 225.0
offset_right = 581.0
offset_bottom = 275.0
text = "Start Server"

[node name="JoinServerButton" type="Button" parent="Buttons"]
offset_left = 435.0
offset_top = 295.0
offset_right = 581.0
offset_bottom = 345.0
text = "Join Server"

[connection signal="pressed" from="Buttons/StartSoloButton" to="." method="_on_start_solo_button_pressed"]
[connection signal="pressed" from="Buttons/StartServerButton" to="." method="_on_start_server_button_pressed"]
[connection signal="pressed" from="Buttons/JoinServerButton" to="." method="_on_join_server_button_pressed"]
